<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".rate" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <EditText
            android:id="@+id/inp_rate"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="" />

        <TextView
            android:id="@+id/rate_show"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/hello" />

        <Button
            android:id="@+id/d1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onclick"
            android:text="@string/d1" />

        <Button
            android:id="@+id/d2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onclick"
            android:text="@string/d2" />

        <Button
            android:id="@+id/d3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onclick"
            android:text="@string/d3" />

        <Button
            android:id="@+id/d4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="send"
            android:text="@string/config" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>