<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".score">

  <LinearLayout
      android:id="@+id/linearLayout5"
      android:layout_width="0dp"
      android:layout_height="300dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">

      <TextView
          android:id="@+id/textView14"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:gravity="center"
          android:text="@string/teama" />

      <TextView
          android:id="@+id/tva"
          android:layout_width="match_parent"
          android:layout_height="47dp"
          android:gravity="center"
          android:text="@string/score" />

      <Button
          android:id="@+id/buta1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclicka"
          android:text="@string/butn1"
          tools:ignore="OnClick" />

      <Button
          android:id="@+id/buta2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclicka"
          android:text="@string/butn2" />

      <Button
          android:id="@+id/buta3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclicka"
          android:text="@string/butn3" />

    </LinearLayout>

    <TextView
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="#958E8E" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"

        android:padding="15dp">

      <TextView
          android:id="@+id/textView15"
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:gravity="center"
          android:text="@string/teamb" />

      <TextView
          android:id="@+id/tvb"
          android:layout_width="match_parent"
          android:layout_height="49dp"
          android:gravity="center"
          android:text="@string/score" />

      <Button
          android:id="@+id/butb1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclickb"
          android:text="@string/butn1" />

      <Button
          android:id="@+id/butb2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclickb"
          android:text="@string/butn2" />

      <Button
          android:id="@+id/butb3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="myclickb"
          android:text="@string/butn3" />

    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/reset"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:onClick="reset"
      android:text="@string/reset"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
</android.support.constraint.ConstraintLayout>