<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/inp_ct"
        android:layout_width="217dp"
        android:layout_height="47dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="101dp"
        android:layout_marginRight="101dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:inputType="numberDecimal"
        android:text="@string/input_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/ct"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/inp_ct"
        app:layout_constraintEnd_toStartOf="@+id/inp_ct" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/tp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/show"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show"
        android:layout_width="226dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:gravity="center_vertical"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_ct" />
</android.support.constraint.ConstraintLayout>