<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/ConstraintLayout"    android:background="@drawable/background"    android:layout_width="match_parent"    android:layout_height="match_parent">    <TextView        android:id="@+id/birthday"        android:layout_width="415dp"        android:layout_height="95dp"        android:layout_marginTop="24dp"        android:gravity="center"        android:text="@string/birthday"        android:textSize="40sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent" />    <TextView        android:id="@+id/textView3"        android:layout_width="105dp"        android:layout_height="35dp"        android:layout_marginStart="43dp"        android:layout_marginLeft="43dp"        android:layout_marginTop="16dp"        android:layout_marginEnd="263dp"        android:layout_marginRight="263dp"        android:gravity="center"        android:text="@string/name"        android:textSize="25sp"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/birthday" />    <TextView        android:id="@+id/textView4"        android:layout_width="122dp"        android:layout_height="30dp"        android:layout_marginTop="4dp"        android:gravity="center"        android:text="@string/stu_id"        android:textSize="25sp"        app:layout_constraintEnd_toStartOf="@+id/textView3"        app:layout_constraintHorizontal_bias="0.012"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/textView3" /></android.support.constraint.ConstraintLayout>