<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rate_list_Activity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="400dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="40dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/result_rate"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/result" />

        <EditText
            android:id="@+id/inp_rmb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:textSize="20dp"
            android:inputType="numberDecimal"
            android:text="@string/rate" />

        <Button
            android:id="@+id/rate_list_submit"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:onClick="list_onclick"
            android:layout_marginTop="45dp"
            android:text="@string/submit" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>